# django-react-social-login

./: Google OAuth creds.txt  pyproject.toml
drf_social/: db.sqlite3
drf_social/drf_social/: asgi.py  settings.py  urls.py  wsgi.py
drf_social/social_login/: views.py
tests/: test_django_react_social_login.py
