[tool.poetry]
name = "django-react-social-login"
version = "0.1.0"
description = ""
authors = ["JosephVC <josephvcardenas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
djangorestframework = "^3.12.2"
django-rest-auth = "^0.9.5"
django-allauth = "^0.43.0"
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
